--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>Welcome!</h1>
 
-Visit my github page at <a href="https://github.com/zy31415">here</a>.
+This is Yang Zhang's github webpage. <p/>
+
+You can visit my github profile page at <a href="https://github.com/zy31415">here</a>.
